[package]
name = "rust-physics-engine"
version = "0.1.0"
authors = ["Anton Zelenin <ntnzelenin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"

[dev-dependencies]
kiss3d = "0.23.0"
nalgebra = "0.20.0"
